<?xml version="1.0"?>
<package format="2">
  <name>spmb</name>
  <version>1.0.0</version>
  <description>The spmb package</description>

  <maintainer email="phirot@kth.se">Philipp Rothenhäusler</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/spmbv2</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
